# cs2

./: CMakeLists.txt  Readme.md
doc/: board_file_spec.tex
include/: archives_model.hpp  board_file.hpp  board_file_manager.hpp  board_selector_dialog.hpp  button.hpp  compat.hpp  console_widget.hpp  cs2.hpp  depth_image_view.hpp  depth_sensor_widget.hpp  heartbeat.hpp  kovan_button_provider.hpp  kovan_kmod_sim.hpp  kovan_protocol_p.hpp  kovan_spiral-inl.hpp  light.hpp  main_window.hpp  mapping_model.hpp  port_configuration.hpp  ports_widget.hpp  process_output_buffer.hpp  robot.hpp  scaling_graphics_view.hpp  server_thread.hpp  settings_dialog.hpp  touch_dial.hpp  vision_channel_model.hpp  vision_config_model.hpp  vision_dialog.hpp
rc/: 2013.board  Info.plist  icons.qrc  platform.hints
rc/boards/: 2014.board  EmptyBoard.board  TapeWorld.board
rc/logos/: kiss.rc
spirals/: kovan_spiral.m
src/: archives_model.cpp  board_file.cpp  board_file_manager.cpp  board_selector_dialog.cpp  button.cpp  compile_worker.cpp  console_widget.cpp  depth_image_view.cpp  depth_sensor_widget.cpp  disable_power_nap.mm  heartbeat.cpp  kovan_button_provider.cpp  kovan_kmod_sim.cpp  light.cpp  main.cpp  main_window.cpp  mapping_model.cpp  port_configuration.cpp  ports_widget.cpp  process_output_buffer.cpp  quser_info.cpp  robot.cpp  scaling_graphics_view.cpp  server_thread.cpp  settings_dialog.cpp  touch_dial.cpp  vision_channel_model.cpp  vision_config_model.cpp  vision_dialog.cpp
ts/: cs2_zh_CN.ts
ui/: board_selector_dialog.ui  depth_sensor_widget.ui  main_window.ui  port_configuration.ui  settings_dialog.ui  vision_dialog.ui
